--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "gh-pages": "^6.1.1",
